@@ -2,3 +2,5 @@ odataserver.address=/denodo-odata.svc
 server.pageSize=1000
 enable.adminUser=true
 odataserver.serviceRoot=
+disable.kerberosAuthentication=false
+disable.basicAuthentication=false
