@@ -1,3 +1,7 @@
+Current
+-------
+- Fixed #29309 - Strange authentication behaviour
+
 20160907
 --------
 - Added #25785 - Add Kerberos auth support to the Denodo OData Service
